tekton/app/deploymentconfig-java-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: java-demo
    app.kubernetes.io/component: java-demo
    app.kubernetes.io/instance: java-demo
  name: java-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      deploymentconfig: java-demo
  template:
    metadata:
      labels:
        deploymentconfig: java-demo
    spec:
      containers:
      - env:
        - name: SPRING_DATASOURCE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: SPRING_DATASOURCE_PASSWORD
              name: tododbsecret
        - name: SPRING_DATASOURCE_USER
          valueFrom:
            secretKeyRef:
              key: SPRING_DATASOURCE_USER
              name: tododbsecret
        image: ${JAVA_DEMO_IMAGE}
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /todos
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        name: java-demo
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /deployments/config
          name: java-demo-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: java-demo
        name: java-demo-volume
