tekton/app/route-java-demo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-demo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
  labels:
    app: java-demo
    app.kubernetes.io/component: java-demo
    app.kubernetes.io/instance: java-demo
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-demo
                port:
                  number: 8080
